lib/sqlParser.js
// @generated by Peggy 4.0.2.
//
// https://peggyjs.org/

"use strict";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = "create table";
  var peg$c1 = "if not exists";
  var peg$c2 = "(";
  var peg$c3 = ")";
  var peg$c4 = "tablespace";
  var peg$c5 = ";";
  var peg$c6 = ".\"";
  var peg$c7 = "\"";
  var peg$c8 = "\".";
  var peg$c9 = "\".\"";
  var peg$c10 = ".";
  var peg$c11 = ",";
  var peg$c12 = "constraint";
  var peg$c13 = "primary key";
  var peg$c14 = "unique";
  var peg$c15 = "`";
  var peg$c16 = "not null";
  var peg$c17 = "default";
  var peg$c18 = "collate";
  var peg$c19 = "nextval(";
  var peg$c20 = "'";
  var peg$c21 = "::";
  var peg$c22 = "[]";
  var peg$c23 = "integer";
  var peg$c24 = "bigint";
  var peg$c25 = "text";
  var peg$c26 = "serial";
  var peg$c27 = "bigserial";
  var peg$c28 = "boolean";
  var peg$c29 = "timestamp";
  var peg$c30 = "with time zone";
  var peg$c31 = "--";
  var peg$c32 = "\n";
  var peg$c33 = "/*";
  var peg$c34 = "*/";
  var peg$c35 = "alter table";
  var peg$c36 = "if exists";
  var peg$c37 = "owner to";

  var peg$r0 = /^[a-zA-Z_0-9]/;
  var peg$r1 = /^[a-zA-Z_]/;
  var peg$r2 = /^[a-zA-Z0-9_.]/;
  var peg$r3 = /^[a-zA-Z_"]/;
  var peg$r4 = /^[a-zA-Z0-9_."]/;
  var peg$r5 = /^[ \t\r\n$]/;
  var peg$r6 = /^[\n]/;

  var peg$e0 = peg$literalExpectation("CREATE TABLE", true);
  var peg$e1 = peg$literalExpectation("IF NOT EXISTS", true);
  var peg$e2 = peg$literalExpectation("(", false);
  var peg$e3 = peg$literalExpectation(")", false);
  var peg$e4 = peg$literalExpectation("TABLESPACE", true);
  var peg$e5 = peg$literalExpectation(";", false);
  var peg$e6 = peg$literalExpectation(".\"", false);
  var peg$e7 = peg$literalExpectation("\"", false);
  var peg$e8 = peg$literalExpectation("\".", false);
  var peg$e9 = peg$literalExpectation("\".\"", false);
  var peg$e10 = peg$literalExpectation(".", false);
  var peg$e11 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false);
  var peg$e12 = peg$literalExpectation(",", false);
  var peg$e13 = peg$literalExpectation("CONSTRAINT", true);
  var peg$e14 = peg$literalExpectation("PRIMARY KEY", true);
  var peg$e15 = peg$literalExpectation("UNIQUE", true);
  var peg$e16 = peg$literalExpectation("`", false);
  var peg$e17 = peg$literalExpectation("NOT NULL", true);
  var peg$e18 = peg$literalExpectation("DEFAULT", true);
  var peg$e19 = peg$literalExpectation("COLLATE", true);
  var peg$e20 = peg$literalExpectation("nextval(", true);
  var peg$e21 = peg$literalExpectation("'", false);
  var peg$e22 = peg$literalExpectation("::", false);
  var peg$e23 = peg$literalExpectation("[]", false);
  var peg$e24 = peg$literalExpectation("integer", true);
  var peg$e25 = peg$literalExpectation("bigint", true);
  var peg$e26 = peg$literalExpectation("text", true);
  var peg$e27 = peg$literalExpectation("serial", true);
  var peg$e28 = peg$literalExpectation("bigserial", true);
  var peg$e29 = peg$literalExpectation("boolean", true);
  var peg$e30 = peg$literalExpectation("timestamp", true);
  var peg$e31 = peg$literalExpectation("with time zone", true);
  var peg$e32 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e33 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "."], false, false);
  var peg$e34 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "\""], false, false);
  var peg$e35 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ".", "\""], false, false);
  var peg$e36 = peg$otherExpectation("whitespace");
  var peg$e37 = peg$classExpectation([" ", "\t", "\r", "\n", "$"], false, false);
  var peg$e38 = peg$literalExpectation("--", false);
  var peg$e39 = peg$classExpectation(["\n"], false, false);
  var peg$e40 = peg$anyExpectation();
  var peg$e41 = peg$literalExpectation("\n", false);
  var peg$e42 = peg$literalExpectation("/*", false);
  var peg$e43 = peg$literalExpectation("*/", false);
  var peg$e44 = peg$literalExpectation("ALTER TABLE", true);
  var peg$e45 = peg$literalExpectation("IF EXISTS", true);
  var peg$e46 = peg$literalExpectation("OWNER to", true);

  var peg$f0 = function(first, rest) { return [first, ...rest] };
  var peg$f1 = function(first) { return [first] };
  var peg$f2 = function(table, columnOrConstraints) {
      return {
        type: "CreateTableStmt",
        table,
        columnOrConstraints,
      }
    };
  var peg$f3 = function(schemaName, tableName) { return { schemaName, tableName } };
  var peg$f4 = function(schemaName, tableName) { return { schemaName, tableName } };
  var peg$f5 = function(schemaName, tableName) { return { schemaName, tableName } };
  var peg$f6 = function(schemaName, tableName) { return { schemaName, tableName } };
  var peg$f7 = function() { return text() };
  var peg$f8 = function(first, rest) { return [first, ...rest] };
  var peg$f9 = function(first) { return [first] };
  var peg$f10 = function(column, type, constraints) {
      return {
        column,
        type,
        columnConstraints: constraints || [],
      }
    };
  var peg$f11 = function(type, constraintColumns) {
    return {
      tableConstraint: {
        [type]: constraintColumns,
      }
    }
  };
  var peg$f12 = function() { return  "primaryKey" };
  var peg$f13 = function() { return "unique" };
  var peg$f14 = function(first, rest) { return [first, ...rest] };
  var peg$f15 = function(first) { return [first] };
  var peg$f16 = function() { return text() };
  var peg$f17 = function() { return text().replace(/"/g, "") };
  var peg$f18 = function() { return text().replace(/`/g, "") };
  var peg$f19 = function() { return text() };
  var peg$f20 = function(first, rest) { return [first, ...rest] };
  var peg$f21 = function(first) { return [first] };
  var peg$f22 = function() { return { notNull: true } };
  var peg$f23 = function() { return { primaryKey: true } };
  var peg$f24 = function(defaultVal) { return { default: defaultVal }};
  var peg$f25 = function(rule) { return { collate: rule } };
  var peg$f26 = function() { return text() };
  var peg$f27 = function() { return text() };
  var peg$f28 = function() { return text() };
  var peg$f29 = function() { return text() };
  var peg$f30 = function() { return textWithoutBlankSpace() };
  var peg$f31 = function() { return textWithoutBlankSpace() };
  var peg$f32 = function() { return textWithoutBlankSpace() };
  var peg$f33 = function() { return "serial" };
  var peg$f34 = function() { return "bigserial" };
  var peg$f35 = function() { return "boolean" };
  var peg$f36 = function() { return "timestamp" };
  var peg$f37 = function() { return text() };
  var peg$f38 = function() { return text() };
  var peg$f39 = function() { return { type: "CommentStmt" } };
  var peg$f40 = function() { return { type: "CommentStmt" } };
  var peg$f41 = function(table, user) { return { type: "AlterTableStmt" } };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0;

    s0 = peg$parseStmts();

    return s0;
  }

  function peg$parseStmts() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseStmt();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseStmts();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseStmt();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f1(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseStmt() {
    var s0;

    s0 = peg$parseCommentStmt();
    if (s0 === peg$FAILED) {
      s0 = peg$parseCreateTableStmt();
      if (s0 === peg$FAILED) {
        s0 = peg$parseAlterTableStmt();
      }
    }

    return s0;
  }

  function peg$parseCreateTableStmt() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 12);
    if (s1.toLowerCase() === peg$c0) {
      peg$currPos += 12;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = input.substr(peg$currPos, 13);
      if (s3.toLowerCase() === peg$c1) {
        peg$currPos += 13;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parse_();
      s5 = peg$parseTable();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 40) {
          s7 = peg$c2;
          peg$currPos++;
        } else {
          s7 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s7 !== peg$FAILED) {
          s8 = peg$parse_();
          s9 = peg$parseColumnOrConstraints();
          if (s9 !== peg$FAILED) {
            s10 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 41) {
              s11 = peg$c3;
              peg$currPos++;
            } else {
              s11 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e3); }
            }
            if (s11 !== peg$FAILED) {
              s12 = peg$parse_();
              s13 = peg$currPos;
              s14 = input.substr(peg$currPos, 10);
              if (s14.toLowerCase() === peg$c4) {
                peg$currPos += 10;
              } else {
                s14 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e4); }
              }
              if (s14 !== peg$FAILED) {
                s15 = peg$parse_();
                s16 = peg$parseIdentifier();
                if (s16 !== peg$FAILED) {
                  s17 = peg$parse_();
                  s14 = [s14, s15, s16, s17];
                  s13 = s14;
                } else {
                  peg$currPos = s13;
                  s13 = peg$FAILED;
                }
              } else {
                peg$currPos = s13;
                s13 = peg$FAILED;
              }
              if (s13 === peg$FAILED) {
                s13 = null;
              }
              s14 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 59) {
                s15 = peg$c5;
                peg$currPos++;
              } else {
                s15 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e5); }
              }
              if (s15 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f2(s5, s9);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTable() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseSchemaIdentifier();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c6) {
        s2 = peg$c6;
        peg$currPos += 2;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 34) {
            s4 = peg$c7;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e7); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f3(s1, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 34) {
        s1 = peg$c7;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSchemaIdentifier();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c8) {
            s3 = peg$c8;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseIdentifier();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f4(s2, s4);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 34) {
          s1 = peg$c7;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parseSchemaIdentifier();
          if (s2 !== peg$FAILED) {
            if (input.substr(peg$currPos, 3) === peg$c9) {
              s3 = peg$c9;
              peg$currPos += 3;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e9); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parseIdentifier();
              if (s4 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 34) {
                  s5 = peg$c7;
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e7); }
                }
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f5(s2, s4);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseSchemaIdentifier();
          if (s1 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 46) {
              s2 = peg$c10;
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e10); }
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$parseIdentifier();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f6(s1, s3);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseSchemaIdentifier() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e11); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = input.charAt(peg$currPos);
        if (peg$r0.test(s2)) {
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e11); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f7();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseColumnOrConstraints() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseColumnOrConstraint();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 44) {
        s3 = peg$c11;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e12); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseColumnOrConstraints();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f8(s1, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseColumnOrConstraint();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f9(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseColumnOrConstraint() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
